--- a/css/style.css
+++ b/css/style.css
@@ -351,7 +351,7 @@ footer .r-icon a:hover {
     height: 100vh;
     width: 100%;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url("../images/background1.jpg");
+      url("../images/back.jpg");
     background-repeat: repeat;
     background-size: cover;
     background-position: -700px 0;
